--- a/bedrock/firefox/templates/firefox/partners/index.html
+++ b/bedrock/firefox/templates/firefox/partners/index.html
@@ -183,7 +183,7 @@
     <div class="giantfox"><div class="giantfox-foreground"></div></div>
     <div class="article-header">
       <h2 id="os-overview-headline" class="tween">
-        <img src="{{ static('img/firefox/partners/firefoxos-title.png?2013-06')}}" alt="{{ _('Firefox OS') }}" />
+        <img src="{{ static('img/firefox/partners/firefoxos-title.png')}}" alt="{{ _('Firefox OS') }}" />
       </h2>
       <nav class="tween">
         <a href="" class="view-section" data-section="os-overview"><span>{{ _('Overview') }}</span></a>
@@ -402,7 +402,7 @@
     </div>
     <div class="article-header">
       <h2 class="tween">
-        <img src="{{ static('img/firefox/partners/android-title.png?2013-06')}}" alt="{{ _('Firefox for Android') }}" />
+        <img src="{{ static('img/firefox/partners/android-title.png')}}" alt="{{ _('Firefox for Android') }}" />
       </h2>
       <nav class="tween">
         <a href="" class="view-section" data-section="android-overview"><span>{{ _('Overview') }}</span></a>
