--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-old.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-old.html
@@ -266,37 +266,37 @@
     <ul class="locations">
       <li>
         <a href="{{ url('mozorg.contact.communities.north-america') }}">
-          <img src="{{ static('/img/contribute/local/map-th-northamerica.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-northamerica.png') }}" alt="">
           <h3>{{_('US and Canada')}}</h3>
         </a>
       </li>
       <li>
         <a href="{{ url('mozorg.contact.communities.europe') }}">
-          <img src="{{ static('/img/contribute/local/map-th-europe.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-europe.png') }}" alt="">
           <h3>{{_('Europe')}}</h3>
         </a>
       </li>
       <li>
         <a href="{{ url('mozorg.contact.communities.latin-america') }}">
-          <img src="{{ static('/img/contribute/local/map-th-latinamerica.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-latinamerica.png') }}" alt="">
           <h3>{{_('Latin America')}}</h3>
         </a>
       </li>
       <li>
         <a href="{{ url('mozorg.contact.communities.africa-middle-east') }}">
-          <img src="{{ static('/img/contribute/local/map-th-africamideast.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-africamideast.png') }}" alt="">
           <h3>{{_('Africa and the Middle East')}}</h3>
         </a>
       </li>
       <li>
         <a href="{{ url('mozorg.contact.communities.asia-south-pacific') }}">
-          <img src="{{ static('/img/contribute/local/map-th-asia.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-asia.png') }}" alt="">
           <h3>{{_('Asia and the South Pacific')}}</h3>
         </a>
       </li>
       <li>
         <a href="{{ url('mozorg.contact.communities.antarctica') }}">
-          <img src="{{ static('/img/contribute/local/map-th-southpole.png?03-2014') }}" alt="">
+          <img src="{{ static('/img/contribute/local/map-th-southpole.png') }}" alt="">
           <h3>{{_('Antarctica')}}</h3>
         </a>
       </li>
