--- a/bedrock/mozorg/templates/mozorg/products.html
+++ b/bedrock/mozorg/templates/mozorg/products.html
@@ -32,7 +32,7 @@
   <ul>
     <li>
       <a href="{{ url('firefox.desktop.index') }}">
-        <img src="{{ static('/img/products/badge-firefox.jpg?2013-06') }}" alt="">
+        <img src="{{ static('/img/products/badge-firefox.jpg') }}" alt="">
         <h3>{{ _('Desktop') }}</h3>
         <p>{{ _('The free, non-profit browser for your desktop.') }}</p>
       </a>
@@ -46,14 +46,14 @@
     </li>
     <li>
       <a href="{{ url('firefox.os.index') }}">
-        <img src="{{ static('/img/products/badge-firefoxos.jpg?2013-06') }}" alt="">
+        <img src="{{ static('/img/products/badge-firefoxos.jpg') }}" alt="">
         <h3>{{ _('OS') }}</h3>
         <p>{{ _('An open operating system for mobile devices.') }}</p>
       </a>
     </li>
     <li>
       <a href="https://marketplace.firefox.com/">
-        <img src="{{ static('/img/products/badge-marketplace.jpg?2013-06') }}" alt="">
+        <img src="{{ static('/img/products/badge-marketplace.jpg') }}" alt="">
         <h3>Marketplace</h3>
         <p>{{ _('A creation and distribution platform for apps.') }}</p>
       </a>
