--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/guidelines.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/guidelines.html
@@ -1,6 +1,6 @@
 {% extends "styleguide/base.html" %}
 
-{% block guide_logo %}{{ static('/img/styleguide/mozilla-dark.png?2013-06') }}{% endblock %}
+{% block guide_logo %}{{ static('/img/styleguide/mozilla-dark.png') }}{% endblock %}
 
 {% block body_class %}
   {{ super() }}
@@ -46,7 +46,7 @@
     <figcaption>{{ _('FM radio') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/guidelines/example-email.png?2013-09') }}" alt="Email (inbox)" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/guidelines/example-email.png') }}" alt="Email (inbox)" />
     <figcaption>{{ _('Email (inbox)') }}</figcaption>
   </figure>
   <figure>
