--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/input-areas.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/input-areas.html
@@ -37,11 +37,11 @@
   <p>Search areas are background sensitive and have been designed for implementation with both light and dark apps.  They are placed just below the header.</p>
   <figure>
     <figcaption>{{ _('Search Area (Idle - Light)') }}</figcaption>
-    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/searcharea-light-idle.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/searcharea-light-idle.png') }}" alt="" />
   </figure>
   <figure>
     <figcaption>{{ _('Search Area (Normal - Light)') }}</figcaption>
-    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/searcharea-light-normal.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/searcharea-light-normal.png') }}" alt="" />
   </figure>
   <figure class="newrow">
     <figcaption>{{ _('Search Area (Idle - Dark)') }}</figcaption>
@@ -104,7 +104,7 @@
     <figcaption>{{ _('Input text field (expanded)') }}</figcaption>
   </figure>
   <figure class="newrow">
-    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/example-search-contacts.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/textarea/example-search-contacts.png') }}" alt="" />
     <figcaption>{{ _('Input area (search contacts)') }}</figcaption>
   </figure>
   <figure>
