--- a/bedrock/thunderbird/templates/thunderbird/base-resp.html
+++ b/bedrock/thunderbird/templates/thunderbird/base-resp.html
@@ -78,7 +78,7 @@
 {% block site_header_logo %}
 <h2>
   <a href="/thunderbird/">
-    <img src="{{ static('img/thunderbird/template/thunderbird.png?2014-10') }}"
+    <img src="{{ static('img/thunderbird/template/thunderbird.png') }}"
          alt="Mozilla Thunderbird"
          height="70"
          width="260">
