--- a/media/css/facebookapps/downloadtab.less
+++ b/media/css/facebookapps/downloadtab.less
@@ -40,7 +40,7 @@
     z-index: 1;
 
     padding-bottom: 430px;
-    background: url('/media/img/facebookapps/downloadtab/firefox.png?05-2014') no-repeat 50% 100%;
+    background: url('/media/img/facebookapps/downloadtab/firefox.png') no-repeat 50% 100%;
     color: @textColorSecondary;
 
     .noscroll & {
@@ -53,13 +53,13 @@
         background-position: 50% 100%;
     }
     .windows .on-scene1.noscroll & {
-        background-image: url('/media/img/facebookapps/downloadtab/browser-win.png?2014-12');
+        background-image: url('/media/img/facebookapps/downloadtab/browser-win.png');
     }
     .linux .on-scene1.noscroll & {
-        background-image: url('/media/img/facebookapps/downloadtab/browser-linux.png?2014-12');
+        background-image: url('/media/img/facebookapps/downloadtab/browser-linux.png');
     }
     .osx .on-scene1.noscroll & {
-        background-image: url('/media/img/facebookapps/downloadtab/browser-mac.png?2014-12');
+        background-image: url('/media/img/facebookapps/downloadtab/browser-mac.png');
     }
 }
 
@@ -68,7 +68,7 @@
        (                min-resolution: 144dpi) {
     #wrapper {
         .osx .on-scene1.noscroll & {
-            background-image: url('/media/img/facebookapps/downloadtab/browser-mac-high-res.png?2014-12');
+            background-image: url('/media/img/facebookapps/downloadtab/browser-mac-high-res.png');
             background-size: 750px 191px;
         }
     }
