--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -104,7 +104,7 @@
                 padding: 10px 10px 10px 45px;
                 background-position: 0 50%;
                 background-repeat: no-repeat;
-                background-image: url(/media/img/firefox/all/download-icons.png?2014-01);
+                background-image: url(/media/img/firefox/all/download-icons.png);
             }
             &.win64 a {
                 background-position: -300px 50%
