--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -615,7 +615,7 @@ html[dir="rtl"] #phone-wrapper figure {
     height: 190px;
     width: 390px;
     margin: 0 auto @baseLine * 2;
-    background-image: url('/media/img/firefox/sync/composite.png?04-2014');
+    background-image: url('/media/img/firefox/sync/composite.png');
     z-index: 1;
 }
 
