--- a/media/css/firefox/australis/australis-page-stacked.less
+++ b/media/css/firefox/australis/australis-page-stacked.less
@@ -56,7 +56,7 @@
         display: table-row;
     }
     .sync-anim {
-        background: url('/media/img/firefox/sync/composite.png?05-2014') top center no-repeat;
+        background: url('/media/img/firefox/sync/composite.png') top center no-repeat;
         .device {
             display: none;
         }
