--- a/media/css/firefox/desktop/customize.less
+++ b/media/css/firefox/desktop/customize.less
@@ -376,7 +376,7 @@ html[dir="rtl"] {
     height: 190px;
     width: 390px;
     margin: 0 auto @baseLine * 2;
-    background-image: url('/media/img/firefox/sync/composite.png?04-2014');
+    background-image: url('/media/img/firefox/sync/composite.png');
     z-index: 1;
 }
 
