--- a/media/css/firefox/desktop/trust.less
+++ b/media/css/firefox/desktop/trust.less
@@ -50,7 +50,7 @@
     }
 
     .feature-list li {
-        background: url(/media/img/firefox/desktop/trust/sprite-privacy.png?2014-11) center top no-repeat;
+        background: url(/media/img/firefox/desktop/trust/sprite-privacy.png) center top no-repeat;
         padding-top: 180px;
 
         &#privacy-dnt {
@@ -132,7 +132,7 @@ html[dir="rtl"] {
        (                min-resolution: 144dpi) {
 
     #privacy .feature-list li {
-        background-image: url(/media/img/firefox/desktop/trust/sprite-privacy-hires.png?2014-11);
+        background-image: url(/media/img/firefox/desktop/trust/sprite-privacy-hires.png);
         background-size: 1540px 160px;
     }
 
