--- a/media/css/firefox/os/devices.less
+++ b/media/css/firefox/os/devices.less
@@ -167,7 +167,7 @@ html, body {
             bottom: -25px;
             margin-left: -14px;
             content: '';
-            background: url(/media/img/firefox/os/devices/device-thumbnail-selected-triangle.png?05-2014) center center no-repeat;
+            background: url(/media/img/firefox/os/devices/device-thumbnail-selected-triangle.png) center center no-repeat;
             width: 28px;
             height: 26px;
             display: block;
