--- a/media/css/firefox/search_tour/common.less
+++ b/media/css/firefox/search_tour/common.less
@@ -80,7 +80,7 @@ header[role="banner"] {
 
             &.search-choice {
                 background: linear-gradient(to bottom, rgba(0, 141, 214, 1) 0%,rgba(0, 141, 214, 0.25) 100%),
-                            url('/media/img/firefox/search_tour/browser.png?24-11-2014') bottom left no-repeat;
+                            url('/media/img/firefox/search_tour/browser.png') bottom left no-repeat;
 
                 h2 {
                     background: url('/media/img/firefox/search_tour/choice-icon.png') bottom left no-repeat;
@@ -135,7 +135,7 @@ header[role="banner"] {
         margin: 0 auto;
         width: 390px;
         height: 190px;
-        background: url('/media/img/firefox/sync/composite.png?24-11-2014') top center no-repeat;
+        background: url('/media/img/firefox/sync/composite.png') top center no-repeat;
     }
 
     .sync-cta {
