--- a/media/css/firefox/sync-old.less
+++ b/media/css/firefox/sync-old.less
@@ -35,7 +35,7 @@
     height: 190px;
     width: 390px;
     margin: @baseLine auto;
-    background-image: url('/media/img/firefox/sync/composite.png?04-2014');
+    background-image: url('/media/img/firefox/sync/composite.png');
 }
 
 .main-content {
