--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -505,7 +505,7 @@
 
     .logo {
         .transition(opacity .25s ease-in);
-        background: transparent url(/media/img/mozorg/history/fxlogo.png?2013-06) no-repeat;
+        background: transparent url(/media/img/mozorg/history/fxlogo.png) no-repeat;
         display: block;
         height: 152px;
         width: 132px;
