--- a/media/css/mozorg/home-promo.less
+++ b/media/css/mozorg/home-promo.less
@@ -59,7 +59,7 @@
 /****************************************************************************/
 // Firefox OS
 #panel-fxos {
-    background: #0095dd url(/media/img/home/panel/firefoxos/firefoxos-fox.png?04-11-13) -100px -100px no-repeat;
+    background: #0095dd url(/media/img/home/panel/firefoxos/firefoxos-fox.png) -100px -100px no-repeat;
 
     &.expanded {
         background-position: -60px -100px;
@@ -115,7 +115,7 @@
 #panel-mdn {
     background: #0062a9 url(/media/img/home/panel/mdn/logo-mdn.png) -25px 40px no-repeat;
     background: url(/media/img/home/panel/mdn/logo-mdn.svg) -25px 40px no-repeat,
-                #0062a9 url(/media/img/home/panel/mdn/bg-grid.png?01-09-14);
+                #0062a9 url(/media/img/home/panel/mdn/bg-grid.png);
 
     .panel-content {
         color: #fff;
@@ -165,7 +165,7 @@
 
     .panel-content {
         color: #fff;
-        background: transparent url(/media/img/home/panel/mozfest/bg-content.png?04-11-13) 230px 0 no-repeat;
+        background: transparent url(/media/img/home/panel/mozfest/bg-content.png) 230px 0 no-repeat;
 
         h3 {
             color: #ff3946;
@@ -427,7 +427,7 @@
 
     // Firefox OS
     #panel-fxos {
-        background-image: url(/media/img/home/panel/firefoxos/firefoxos-fox-md.png?04-11-13);
+        background-image: url(/media/img/home/panel/firefoxos/firefoxos-fox-md.png);
         background-position: -115px -70px;
 
         &.expanded {
@@ -580,7 +580,7 @@
 
     // Firefox OS
     #panel-fxos {
-        background-image: url(/media/img/home/panel/firefoxos/firefoxos-fox-sm.png?04-11-13);
+        background-image: url(/media/img/home/panel/firefoxos/firefoxos-fox-sm.png);
         background-position: -85px -95px;
 
         &.expanded {
@@ -617,7 +617,7 @@
     #panel-mdn {
         background-image: url(/media/img/home/panel/mdn/logo-mdn-sm.png);
         background-image: url(/media/img/home/panel/mdn/logo-mdn.svg),
-                          url(/media/img/home/panel/mdn/bg-grid.png?01-09-14);
+                          url(/media/img/home/panel/mdn/bg-grid.png);
         background-position: -20px -10px;
         background-position: -20px -10px, -350px 0;
         background-size: 120px 105px, auto auto;
