--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -840,7 +840,7 @@ html[lang|="en"] {
     h2 {
         padding: 110px @baseLine 0 @baseLine;
         margin-top: @baseLine;
-        background-image: url(/media/img/home/voices/promos/webmaker/webmaker.png?11-21-2014);
+        background-image: url(/media/img/home/voices/promos/webmaker/webmaker.png);
         background-position: top center;
         background-repeat: no-repeat;
         .background-size(104px, 104px);
@@ -861,7 +861,7 @@ html[lang|="en"] {
     h2 {
         padding: 35px 0 35px 140px;
         min-height: 50px;
-        background: url(/media/img/home/voices/promos/webmaker/webmaker.png?11-21-2014) 20px 15px no-repeat;
+        background: url(/media/img/home/voices/promos/webmaker/webmaker.png) 20px 15px no-repeat;
     }
 }
 
@@ -1436,7 +1436,7 @@ html[lang|="en"] {
 
 @media only screen and (min-width: (@widthSquareGrid_4)) {
     .promo-face .face {
-        background-image: url(/media/img/home/voices/faces-color-sprite.jpg?08-09-2014);
+        background-image: url(/media/img/home/voices/faces-color-sprite.jpg);
     }
 }
 
@@ -1643,7 +1643,7 @@ html[lang|="en"] {
 // Promo faces background grid should not be loaded at smallest viewport size
 @media only screen and (min-width: @widthSquareGrid_6) {
     .faces-grid-inner {
-        background: #fff url(/media/img/home/voices/mosaic-background.jpg?03-10-2014) -10px 0 repeat;
+        background: #fff url(/media/img/home/voices/mosaic-background.jpg) -10px 0 repeat;
     }
 }
 
@@ -1675,7 +1675,7 @@ html[lang|="en"] {
     // Webmaker
     .promo-large-landscape.webmaker {
         h2 {
-            background-image: url(/media/img/home/voices/promos/webmaker/webmaker-high-res.png?11-21-2014);
+            background-image: url(/media/img/home/voices/promos/webmaker/webmaker-high-res.png);
             .background-size(104px, 104px);
         }
     }
