--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -635,7 +635,7 @@ h1, h2, h3, h4, h5, h6 {
             content: '';
             width: 100%;
             height: 84px;
-            background: url(/media/img/home/voices/secondary-icon-sprite.png?29-09-2014) no-repeat center top;
+            background: url(/media/img/home/voices/secondary-icon-sprite.png) no-repeat center top;
         }
     }
 
