--- a/media/css/plugincheck/plugincheck.less
+++ b/media/css/plugincheck/plugincheck.less
@@ -173,7 +173,7 @@
     font-weight: normal;
     span {
         display: inline-block;
-        background: transparent url(/media/img/plugincheck/buttons/up-to-date.png?2013-08-08) 0 5px no-repeat;
+        background: transparent url(/media/img/plugincheck/buttons/up-to-date.png) 0 5px no-repeat;
         color: #fff;
         padding: 12px 0 12px 21px;
         width: 101px;
