--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -294,7 +294,7 @@
         color: #b8e779;
         margin-left: -54px;
         _margin-left:0;
-        background: url(/media/img/sandstone/buttons/firefox-large.png?2013-06) 0 0 no-repeat;
+        background: url(/media/img/sandstone/buttons/firefox-large.png) 0 0 no-repeat;
         _background-color: @buttonGreenDark;
         min-height: 82px;
         margin-bottom: -12px;
@@ -343,7 +343,7 @@
         _margin-left:0;
         margin-top: -2px;
         margin-bottom: -7px;
-        background-image: url(/media/img/sandstone/buttons/firefox-small.png?2013-06);
+        background-image: url(/media/img/sandstone/buttons/firefox-small.png);
         min-height: 45px;
         padding: 10px 20px 10px 73px;
         overflow: visible;
@@ -425,19 +425,19 @@
 }
 
 .download-button-large.beta .download-link .download-content {
-  background-image: url(/media/img/sandstone/buttons/beta-large.png?2013-06);
+  background-image: url(/media/img/sandstone/buttons/beta-large.png);
 }
 
 .download-button-small.beta .download-link .download-content {
-  background-image: url(/media/img/sandstone/buttons/beta-small.png?2013-06);
+  background-image: url(/media/img/sandstone/buttons/beta-small.png);
 }
 
 .download-button-large.aurora .download-link .download-content {
-  background-image: url(/media/img/sandstone/buttons/aurora-large.png?2013-06);
+  background-image: url(/media/img/sandstone/buttons/aurora-large.png);
 }
 
 .download-button-small.aurora .download-link .download-content {
-  background-image: url(/media/img/sandstone/buttons/aurora-small.png?2013-06);
+  background-image: url(/media/img/sandstone/buttons/aurora-small.png);
 }
 
 .download-button.download-button-noicon {
