--- a/bedrock/facebookapps/templates/facebookapps/downloadtab.html
+++ b/bedrock/facebookapps/templates/facebookapps/downloadtab.html
@@ -26,7 +26,7 @@
 <header id="masthead">
     {% if noscroll %}
         <a href="#" id="logo">
-            <img src="{{ static('img/facebookapps/downloadtab/header-firefox.png?05-2014') }}" alt="{{ _('Firefox for desktop') }}" width="180">
+            <img src="{{ static('img/facebookapps/downloadtab/header-firefox.png') }}" alt="{{ _('Firefox for desktop') }}" width="180">
         </a>
     {% endif %}
 
@@ -121,7 +121,7 @@
         data-page-namespace="{{ settings.FACEBOOK_PAGE_NAMESPACE }}"
         data-active-scene="{{ request.GET.get('scene') }}"
         data-tab-redirect-path="{{ url('facebookapps.tab_redirect') }}"
-        data-share-image-path="{{ static('img/facebookapps/downloadtab/sharing-image.jpg?05-2014') }}"
+        data-share-image-path="{{ static('img/facebookapps/downloadtab/sharing-image.jpg') }}"
         data-is-dev="{{ 'true' if settings.DEV else 'false' }}"
     ></div>
 
