--- a/bedrock/firefox/templates/firefox/australis/firstrun-34-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/firstrun-34-tour.html
@@ -41,7 +41,7 @@
                 <li><a href="#" role="button" class="more">{{ _('Learn how to customize your Firefox') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-menu-bar.jpg?03-2014', {'alt': _('The features you use most, all in one place'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('img/firefox/australis/diag-menu-bar.jpg', {'alt': _('The features you use most, all in one place'), 'width': '300', 'height': '188'}) }}
           </li>
           <li class="tour-step" data-step="2" data-tip-prev="{{ _('<span>Previous:</span> Menu') }}" data-tip-next="{{ _('<span>Next:</span> Search') }}">
             <div class="tour-item">
@@ -55,7 +55,7 @@
                 <li><a href="#" role="button" class="more">{{ _('Choose how you want to search') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-customize.jpg?03-2014', {'alt': _('Learn how to customize your Firefox'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('img/firefox/australis/diag-customize.jpg', {'alt': _('Learn how to customize your Firefox'), 'width': '300', 'height': '188'}) }}
           </li>
           <li class="tour-step" data-step="3" data-tip-prev="{{ _('<span>Previous:</span> Customize') }}" data-tip-next="{{ _('<span>Next:</span> Bookmarks') }}">
             <div class="tour-item">
@@ -69,7 +69,7 @@
                 <li><a href="#" role="button" class="more">{{ _('Use the star to create bookmarks') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-search.jpg?25-11-04', {'alt': _('Search suggestions appear as you type'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('img/firefox/australis/diag-search.jpg', {'alt': _('Search suggestions appear as you type'), 'width': '300', 'height': '188'}) }}
           </li>
           <li class="tour-step" data-step="4" data-tip-prev="{{ _('<span>Previous:</span> Search') }}">
             <div class="tour-item">
@@ -83,11 +83,11 @@
                 <li id="sync-link"><a href="#" role="button" class="more">{{ _('Enjoy seamless browsing between devices with Sync') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-bookmarks.jpg?03-2014', {'alt': _('Use the star to create bookmarks'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('img/firefox/australis/diag-bookmarks.jpg', {'alt': _('Use the star to create bookmarks'), 'width': '300', 'height': '188'}) }}
           </li>
         </ul>
         <div class="compact-title"></div>
-        <div class="tour-init" data-target="appMenu" data-icon="{{ static('img/firefox/australis/logo.png?2014-03') }}" data-icon-high-res="{{ static('img/firefox/australis/logo-high-res.png?2014-03') }}"></div>
+        <div class="tour-init" data-target="appMenu" data-icon="{{ static('img/firefox/australis/logo.png') }}" data-icon-high-res="{{ static('img/firefox/australis/logo-high-res.png') }}"></div>
       </div>
     </div>
   </div>
