--- a/bedrock/firefox/templates/firefox/base.html
+++ b/bedrock/firefox/templates/firefox/base.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block site_header_logo %}
-<h2><a href="{{ url('firefox') }}"><img src="{{ static('img/firefox/template/header-logo.png?2013-06') }}" alt="Mozilla Firefox" height="70" width="185" data-inverse-src="{{ static('img/firefox/template/header-logo-inverse.png?2013-06') }}"></a></h2>
+<h2><a href="{{ url('firefox') }}"><img src="{{ static('img/firefox/template/header-logo.png') }}" alt="Mozilla Firefox" height="70" width="185" data-inverse-src="{{ static('img/firefox/template/header-logo-inverse.png') }}"></a></h2>
 {% endblock %}
 
 {% block site_js %}
