--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -33,8 +33,8 @@
 <div id="main-content" class="pager pager-with-tabs pager-cleartype-fix pager-auto-init">
 
   <ul id="toggler-container" class="pager-tabs">
-    <li id="beta-link"><a href="#beta"><img src="{{ static('/img/firefox/channel/toggler-beta.png?2013-06') }}" alt="Firefox Beta" id="toggler-logo-beta" /></a></li>
-    <li id="firefox-link"><a href="#firefox"><img src="{{ static('/img/firefox/channel/toggler-firefox.png?2013-06') }}" alt="Firefox" id="toggler-logo-firefox" /></a></li>
+    <li id="beta-link"><a href="#beta"><img src="{{ static('/img/firefox/channel/toggler-beta.png') }}" alt="Firefox Beta" id="toggler-logo-beta" /></a></li>
+    <li id="firefox-link"><a href="#firefox"><img src="{{ static('/img/firefox/channel/toggler-firefox.png') }}" alt="Firefox" id="toggler-logo-firefox" /></a></li>
     <li id="aurora-link"><a href="#developer"><img src="{{ static('/img/firefox/channel/toggler-dev.png') }}" alt="Firefox Developer Edition" id="toggler-logo-aurora" /></a></li>
   </ul>
 
