--- a/bedrock/foundation/templates/foundation/trademarks/list.html
+++ b/bedrock/foundation/templates/foundation/trademarks/list.html
@@ -15,11 +15,11 @@
 {% block article %}
   <table id="logos">
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Firefox logo') }}®" src="{{ static('/img/trademarks/firefox-logo-r.png?2013-06') }}" /></td>
+      <td><img width="100" height="100" alt="{{ _('Firefox logo') }}®" src="{{ static('/img/trademarks/firefox-logo-r.png') }}" /></td>
       <th>{{ _('Firefox logo') }}&reg;</th>
     </tr>
     <tr>
-      <td><img width="100" height="100" alt="{{ _('Firefox OS logo') }}" src="{{ static('/img/trademarks/FirefoxOS_logo-wordmark.png?2013-06') }}" /></td>
+      <td><img width="100" height="100" alt="{{ _('Firefox OS logo') }}" src="{{ static('/img/trademarks/FirefoxOS_logo-wordmark.png') }}" /></td>
       <th>{{ _('Firefox OS logo') }}</th>
       </tr>
     <tr>
