--- a/bedrock/mozorg/templates/mozorg/partnerships.html
+++ b/bedrock/mozorg/templates/mozorg/partnerships.html
@@ -36,8 +36,8 @@
 <div id="sections">
 
 <section id="firefox">
-  <img src="{{ static('/img/mozorg/partnerships/banner-firefox.jpg?2013-06') }}" alt="{{ _('Firefox screenshot') }}" />
-  <img src="{{ static('/img/mozorg/partnerships/icon-firefox.png?2013-06') }}" alt="{{ _('Firefox icon') }}" class="icon" />
+  <img src="{{ static('/img/mozorg/partnerships/banner-firefox.jpg') }}" alt="{{ _('Firefox screenshot') }}" />
+  <img src="{{ static('/img/mozorg/partnerships/icon-firefox.png') }}" alt="{{ _('Firefox icon') }}" class="icon" />
   <h3>{{ _('Firefox for Desktop') }}</h3>
   <p>
     {{ _('Opportunities include promoted content, distribution, customized versions and more of our PC, Mac &amp; Linux browser.') }}
@@ -54,7 +54,7 @@
 </section>
 
 <section id="android">
-  <img src="{{ static('/img/mozorg/partnerships/banner-android.jpg?2013-06') }}" alt="{{ _('Firefox for Android screenshot') }}" />
+  <img src="{{ static('/img/mozorg/partnerships/banner-android.jpg') }}" alt="{{ _('Firefox for Android screenshot') }}" />
   <img src="{{ static('/img/mozorg/partnerships/icon-android.png') }}" alt="{{ _('Firefox for Android icon') }}" class="icon" />
   <h3>{{ _('Firefox for Android') }}</h3>
   <p>{{ _('Opportunities include distribution, customized versions and more of our mobile browser.') }}</p>
@@ -74,8 +74,8 @@
 </section>
 
 <section id="firefoxos">
-  <img src="{{ static('/img/mozorg/partnerships/banner-firefoxos.jpg?2013-06') }}" alt="{{ _('Firefox OS screenshot') }}" />
-  <img src="{{ static('/img/mozorg/partnerships/icon-firefox.png?2013-06') }}" alt="{{ _('Firefox icon') }}" class="icon" />
+  <img src="{{ static('/img/mozorg/partnerships/banner-firefoxos.jpg') }}" alt="{{ _('Firefox OS screenshot') }}" />
+  <img src="{{ static('/img/mozorg/partnerships/icon-firefox.png') }}" alt="{{ _('Firefox icon') }}" class="icon" />
   <h3>{{ _('Firefox OS') }}</h3>
   <p>{{ _('If you are a phone and tablet OEM/ODM or a mobile operator, talk to us about our new Web-based device platform.') }}</p>
 </section>
