--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -146,7 +146,7 @@
         <li>{{_('Old plugins <strong>increase your risk</strong> for attack by malware, viruses, and other security threats.')}}</li>
         <li>{{_('<strong>Updated plugins have improvements</strong> that make the web <strong>better and safer</strong> for you.')}}</li>
       </ul>
-      <p><img src="{{ static('img/plugincheck/screenshots/addons-screenshot.jpg?2013-07') }}" width="440" height="301" alt="{{_('Screenshot of Add-Ons manager')}}" /></p>
+      <p><img src="{{ static('img/plugincheck/screenshots/addons-screenshot.jpg') }}" width="440" height="301" alt="{{_('Screenshot of Add-Ons manager')}}" /></p>
     </div>
     <div class="container-column">
       <h3>{{_('How can Firefox help me?')}}</h3>
