--- a/bedrock/styleguide/templates/styleguide/identity/firefox-channels.html
+++ b/bedrock/styleguide/templates/styleguide/identity/firefox-channels.html
@@ -18,7 +18,7 @@
 </section>
 <section id="firefox">
   <h2>Firefox</h2>
-  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox.png?2013-06') }}" alt="Logo" /></div>
+  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox.png') }}" alt="Logo" /></div>
   <div class="download">
     <h4>Download</h4>
     <ul class="button-list">
@@ -30,7 +30,7 @@
 </section>
 <section id="firefox-beta">
   <h2>Firefox Beta</h2>
-  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-beta.png?2013-06') }}" alt="Logo" /></div>
+  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-beta.png') }}" alt="Logo" /></div>
   <div class="download">
     <h4>Download <span>(with beta sash)</span></h4>
     <ul class="button-list">
@@ -43,7 +43,7 @@
 </section>
 <section id="firefox-nightly">
   <h2>Firefox Nightly</h2>
-  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-nightly.png?2013-06') }}" alt="Logo" /></div>
+  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-nightly.png') }}" alt="Logo" /></div>
   <div class="download">
     <h4>Download</h4>
     <ul class="button-list">
@@ -55,7 +55,7 @@
 </section>
 <section id="firefox-developer">
   <h2>Firefox Developer Edition</h2>
-  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-developer.png?2014-11') }}" alt="Logo" /></div>
+  <div class="logo"><img src="{{ static('/img/styleguide/identity/firefox/channels-firefox-developer.png') }}" alt="Logo" /></div>
   <div class="download">
     <h4>Download</h4>
     <ul class="button-list">
