--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/buttons.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/buttons.html
@@ -49,7 +49,7 @@
     <figcaption>{{ _('Main buttons') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/buttons/example-value-selectors.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/buttons/example-value-selectors.png') }}" alt="" />
     <figcaption>{{ _('Value selectors + single main button') }}</figcaption>
   </figure>
   <figure>
@@ -57,7 +57,7 @@
     <figcaption>{{ _('Display value selectors') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/buttons/example-list-buttons.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/buttons/example-list-buttons.png') }}" alt="" />
     <figcaption>{{ _('List buttons') }}</figcaption>
   </figure>
   <figure>
