--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/color.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/color.html
@@ -192,7 +192,7 @@
 
   <h3>Blue</h3>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-on-state-switchers.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-on-state-switchers.png') }}" alt="" />
     <figcaption>{{ _('On state of switchers') }}</figcaption>
   </figure>
   <figure>
@@ -206,25 +206,25 @@
 
   <h3>Orange</h3>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-indication-icons.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-indication-icons.png') }}" alt="" />
     <figcaption>{{ _('Indication icons') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-alphabetical-dividers.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-alphabetical-dividers.png') }}" alt="" />
     <figcaption>{{ _('Alphabetical dividers') }}</figcaption>
   </figure>
 
   <h3>White and Light Greys for backgrounds</h3>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-white-first-level.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-white-first-level.png') }}" alt="" />
     <figcaption>{{ _('White for first level light apps') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-grey-second-level.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-grey-second-level.png') }}" alt="" />
     <figcaption>{{ _('Light grey for second level light apps') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-grey-second-level-2.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-grey-second-level-2.png') }}" alt="" />
     <figcaption>{{ _('Light grey for messaging app') }}</figcaption>
   </figure>
 
@@ -234,7 +234,7 @@
     <figcaption>{{ _('Pressed state of dialer icons') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-dark-grey-media.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/color/example-dark-grey-media.png') }}" alt="" />
     <figcaption>{{ _('Media app headers') }}</figcaption>
   </figure>
 
