--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/lists.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/lists.html
@@ -126,19 +126,19 @@
 <section id="examples">
   <h2>Usage Examples</h2>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-contacts.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-contacts.png') }}" alt="" />
     <figcaption>{{ _('Contacts list') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-albums.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-albums.png') }}" alt="" />
     <figcaption>{{ _('Albums list (music)') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-messages.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-messages.png') }}" alt="" />
     <figcaption>{{ _('Messages list (email)') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-settings.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/lists/example-settings.png') }}" alt="" />
     <figcaption>{{ _('Settings') }}</figcaption>
   </figure>
   <figure>
