--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/switches.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/switches.html
@@ -113,7 +113,7 @@
     <figcaption>{{ _('Red check boxes for deleting') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/switches/example-toggle.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/switches/example-toggle.png') }}" alt="" />
     <figcaption>{{ _('Toggle on and off') }}</figcaption>
   </figure>
   <figure>
@@ -121,7 +121,7 @@
     <figcaption>{{ _('Tick for single selecting') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/switches/example-slider.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/switches/example-slider.png') }}" alt="" />
     <figcaption>{{ _('Brightness slider') }}</figcaption>
   </figure>
 </section>
