--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/tab-bars.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/tab-bars.html
@@ -102,7 +102,7 @@
     <figcaption>{{ _('Tab Bar with 3 action icons') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/tabbar/example-5-actions.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/tabbar/example-5-actions.png') }}" alt="" />
     <figcaption>{{ _('Tab Bar with 5 action icons') }}</figcaption>
   </figure>
   <figure class="newrow">
@@ -114,7 +114,7 @@
     <figcaption>{{ _('Bottom filters') }}</figcaption>
   </figure>
   <figure>
-    <img src="{{ static('/img/styleguide/products/firefoxos/tabbar/example-normal.png?2013-09') }}" alt="" />
+    <img src="{{ static('/img/styleguide/products/firefoxos/tabbar/example-normal.png') }}" alt="" />
     <figcaption>{{ _('Toolbar normal distribution') }}</figcaption>
   </figure>
 </section>
