--- a/bedrock/styleguide/templates/styleguide/products/firefox-os/typeface.html
+++ b/bedrock/styleguide/templates/styleguide/products/firefox-os/typeface.html
@@ -128,7 +128,7 @@
 
 <section id="examples">
   <h2>Usage Examples</h2>
-  <img src="{{ static('/img/styleguide/products/firefoxos/typeface/example.png?2013-09') }}" alt="Example" />
+  <img src="{{ static('/img/styleguide/products/firefoxos/typeface/example.png') }}" alt="Example" />
 </section>
 
 <section id="converting">
