--- a/bedrock/styleguide/templates/styleguide/websites/sandstone-buttons.html
+++ b/bedrock/styleguide/templates/styleguide/websites/sandstone-buttons.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="examples">
-    <img src="{{ static('/img/styleguide/websites/sandstone/icons.png?2013-06') }}" alt="Sandstone icons" id="icons" />
+    <img src="{{ static('/img/styleguide/websites/sandstone/icons.png') }}" alt="Sandstone icons" id="icons" />
   </div>
 </section>
 
