--- a/media/css/firefox/dnt.less
+++ b/media/css/firefox/dnt.less
@@ -31,7 +31,7 @@
 }
 
 #dnt-status {
-    background: #fff url(/media/img/firefox/dnt/status-logo.png?2013-06) 100% 5px no-repeat;
+    background: #fff url(/media/img/firefox/dnt/status-logo.png) 100% 5px no-repeat;
     border-bottom: 1px solid #ddd;
     padding: (@baseLine * .75) @baseLine;
     h4 {
