--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -724,7 +724,7 @@ html[lang|="en"] #get-firefox-os {
   .screen {
     width: 218px;
     height: 332px;
-    background-image: url('/media/img/firefox/os/phone/screens-en-us.jpg?2013-09');
+    background-image: url('/media/img/firefox/os/phone/screens-en-us.jpg');
     background-repeat: no-repeat;
   }
 
@@ -772,7 +772,7 @@ html[lang|="en"] #get-firefox-os {
 // hack for en-US visitors in India
 html[lang|="en"].en-IN {
   .phone-wrapper .screen {
-    background-image: url('/media/img/firefox/os/phone/screens-en-in.jpg?2013-09');
+    background-image: url('/media/img/firefox/os/phone/screens-en-in.jpg');
   }
 }
 
@@ -790,13 +790,13 @@ html[lang='ta'] {
 
 html[lang^="es"] {
   .phone-wrapper .screen {
-    background-image: url('/media/img/firefox/os/phone/screens-es-es.jpg?2013-09');
+    background-image: url('/media/img/firefox/os/phone/screens-es-es.jpg');
   }
 }
 
 html[lang="pl"] {
   .phone-wrapper .screen {
-    background-image: url('/media/img/firefox/os/phone/screens-pl-pl.jpg?2013-09');
+    background-image: url('/media/img/firefox/os/phone/screens-pl-pl.jpg');
   }
 }
 
@@ -904,7 +904,7 @@ html[lang="el"] {
         margin: 0 auto;
         float: left;
         background-color: transparent;
-        background-image: url('/media/img/firefox/os/have-it-all/app-icons.png?2014-07');
+        background-image: url('/media/img/firefox/os/have-it-all/app-icons.png');
       }
       .curr {
         .transition(text-shadow 0.2s linear);
@@ -1063,7 +1063,7 @@ html[lang="el"] {
     width: 62px;
     height: 65px;
     margin: 0 auto;
-    background: url('/media/img/firefox/os/have-it-all/content-icons.png?2014-07') no-repeat top left;
+    background: url('/media/img/firefox/os/have-it-all/content-icons.png') no-repeat top left;
   }
   .contacts {
     background-position: 0 -114px;
