--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -247,7 +247,7 @@
     }
 }
 #overview {
-    background: url(/media/img/firefox/partners/overview-bg.png?2013-06) center -15px no-repeat;
+    background: url(/media/img/firefox/partners/overview-bg.png) center -15px no-repeat;
     h2 {
         .font-size(80px);
         letter-spacing: -4px;
@@ -528,12 +528,12 @@
         left: -75px;
         width: 231px;
         height: 256px;
-        background: url(/media/img/firefox/partners/android-dude.png?2013-06) no-repeat 0 0;
+        background: url(/media/img/firefox/partners/android-dude.png) no-repeat 0 0;
         z-index: 130;
     }
     #android-partner {
         padding-top: 0;
-        background: url(/media/img/firefox/partners/android-partners-bg.png?2014-02) 50% 200px no-repeat;
+        background: url(/media/img/firefox/partners/android-partners-bg.png) 50% 200px no-repeat;
         .intro {
             padding-top: 120px;
             h3 {
@@ -551,7 +551,7 @@
     .android-tablet {
         width: 1021px;
         height: 662px;
-        background: url(/media/img/firefox/partners/android-tablet-frame.png?2014-02) no-repeat 0 0;
+        background: url(/media/img/firefox/partners/android-tablet-frame.png) no-repeat 0 0;
         position: absolute;
         top: 150px;
         left: 50%;
@@ -564,7 +564,7 @@
             right: 127px;
             width: 767px;
             height: 488px;
-            background: url(/media/img/firefox/partners/android-tablet-screen.jpg?2014-02) no-repeat 0 0;
+            background: url(/media/img/firefox/partners/android-tablet-screen.jpg) no-repeat 0 0;
         }
     }
 }
@@ -684,7 +684,7 @@ body #partner-menu, body #mwc-menu {
         }
     }
     #screen-os {
-        background: url(/media/img/firefox/partners/phone-os-screenshots.jpg?2014-02) 0 0 repeat-x;
+        background: url(/media/img/firefox/partners/phone-os-screenshots.jpg) 0 0 repeat-x;
         z-index: 0;
 
         -moz-animation: os-screenslide 20s ease infinite alternate;
@@ -759,7 +759,7 @@ body #partner-menu, body #mwc-menu {
         height: 636px;
     }
     .phone-overlay {
-        background: url(/media/img/firefox/partners/phone-android.png?2013-06) 50% 100% no-repeat;
+        background: url(/media/img/firefox/partners/phone-android.png) 50% 100% no-repeat;
         height: 636px;
     }
     &.android-phone-visible {
