--- a/media/css/mozorg/home/home-ie8.less
+++ b/media/css/mozorg/home/home-ie8.less
@@ -27,11 +27,11 @@
     width: @widthSquareGrid_6;
     left: 0;
     margin-left: @baseLine;
-    background: url(/media/img/home/voices/mosaic-background.jpg?03-10-2014) -10px 0 repeat;
+    background: url(/media/img/home/voices/mosaic-background.jpg) -10px 0 repeat;
 }
 
 .promo-face .face {
-    background-image: url(/media/img/home/voices/faces-color-sprite.jpg?08-09-2014);
+    background-image: url(/media/img/home/voices/faces-color-sprite.jpg);
 }
 
 .html-rtl {
@@ -49,7 +49,7 @@
         text-indent: 0;
         content: '';
         border: none;
-        background-image: url(/media/img/home/voices/promos/go-sprite.png?08-09-2014);
+        background-image: url(/media/img/home/voices/promos/go-sprite.png);
         background-position: 0 0;
         background-repeat: no-repeat;
     }
@@ -90,7 +90,7 @@
         font-family: inherit;
         content: '';
         border: none;
-        background-image: url(/media/img/home/voices/promos/go-sprite.png?08-09-2014);
+        background-image: url(/media/img/home/voices/promos/go-sprite.png);
         background-position: 0 -84px;
         background-repeat: no-repeat;
     }
