Update Hello product page og:image. Bug 1125346.

--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -9,6 +9,7 @@
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Firefox Hello — Free, easy video conversations') }}{% endblock %}
 {% block page_desc %}{{ _('Learn all about Firefox Hello and see for yourself how easy it is to have a free video conversation with anyone, anywhere, right from your browser') }}{% endblock %}
+{% block page_image %}{{ media('img/firefox/hello/hello-share.jpg') }}{% endblock %}
 {% block body_id %}firefox-hello{% endblock %}
 
 {% block site_css %}
