Fix Bug 1094435 - GA event tracking for /android/

--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -94,7 +94,7 @@
             {% endtrans %}
             </p>
 
-            <a rel="external" href="https://www.youtube.com/watch?v=a5nNPf-Uosc&amp;index=12&amp;list=PLA8ABF6B7A66A0C5E">{{ _('See how it works') }}</a>
+            <a rel="external" href="https://www.youtube.com/watch?v=a5nNPf-Uosc&amp;index=12&amp;list=PLA8ABF6B7A66A0C5E" class="see-how">{{ _('See how it works') }}</a>
 
             <figure>
               <div class="media-desktop">
@@ -119,7 +119,7 @@
             {% endtrans %}
             </p>
 
-            <a rel="external" href="https://www.youtube.com/watch?v=alW2g7Gnh6U&amp;list=PLA8ABF6B7A66A0C5E&amp;index=18">{{ _('See how it works') }}</a>
+            <a rel="external" href="https://www.youtube.com/watch?v=alW2g7Gnh6U&amp;list=PLA8ABF6B7A66A0C5E&amp;index=18" class="see-how">{{ _('See how it works') }}</a>
 
             <figure>
               <div class="media-desktop">
@@ -146,7 +146,7 @@
             {% endtrans %}
             </p>
 
-            <a rel="external" href="https://www.youtube.com/watch?v=HKvyr0TIKF0&amp;index=14&amp;list=PLA8ABF6B7A66A0C5E">{{ _('Learn more') }}</a>
+            <a rel="external" href="https://www.youtube.com/watch?v=HKvyr0TIKF0&amp;index=14&amp;list=PLA8ABF6B7A66A0C5E" class="learn-more">{{ _('Learn more') }}</a>
 
             <figure>
               <div class="media-desktop">
@@ -169,7 +169,7 @@
               {{ _('Or change it any time to the one that best matches your search and privacy needs.') }}
             </p>
 
-            <a rel="external" href="https://support.mozilla.org/kb/set-and-manage-default-search-engines-firefox-android">{{ _('See how it works') }}</a>
+            <a rel="external" href="https://support.mozilla.org/kb/set-and-manage-default-search-engines-firefox-android" class="see-how">{{ _('See how it works') }}</a>
 
             <figure>
               <div class="media-desktop">
@@ -196,7 +196,7 @@
             {% endtrans %}
             </p>
 
-            <a rel="external" href="https://support.mozilla.org/kb/change-default-language-firefox-android">{{ _('Learn more') }}</a>
+            <a rel="external" href="https://support.mozilla.org/kb/change-default-language-firefox-android" class="learn-more">{{ _('Learn more') }}</a>
 
             <figure>
               <div class="media-desktop">
@@ -221,7 +221,7 @@
             {% endtrans %}
             </p>
 
-            <a rel="external" href="https://support.mozilla.org/kb/send-webpages-your-tv-firefox-android-chromecast">{{ _('Learn more') }}</a>
+            <a rel="external" href="https://support.mozilla.org/kb/send-webpages-your-tv-firefox-android-chromecast" class="learn-more">{{ _('Learn more') }}</a>
 
             <figure>
               <div class="media-desktop">
