--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -358,7 +358,7 @@
 {%- endmacro %}
 
 {% macro share_cta(cta_text, share_urls, share_text, id) %}
-<div class="mozilla-share-cta" tabindex="0"{% if id -%} id="{{ id }}"{% endif -%}>
+<div class="mozilla-share-cta" tabindex="0"{% if id %} id="{{ id }}"{% endif -%}>
   <h3>{{ cta_text }}</h3>
   <ul>
     <li><a class="twitter" href="{{ 'https://www.twitter.com/intent/tweet?url=%s&amp;text=%s'|format(share_urls.get('twitter')|urlencode, share_text|urlencode)|e }}" title="Twitter">Twitter</a></li>
