Bug 1109318 Update GA campaign for Privay Day

--- a/bedrock/privacy/templates/privacy/privacy-day.html
+++ b/bedrock/privacy/templates/privacy/privacy-day.html
@@ -25,8 +25,8 @@
 {%
 set share_urls = {
     'twitter': 'http://mzl.la/1E63Mxm',
-    'googleplus': 'https://www.mozilla.org/' + LANG + '/privacy/tips/?utm_source=Google&utm_medium=MozLandingPage&utm_campaign=privacy2015&utm_content=WebsiteShare',
-    'facebook': 'https://www.mozilla.org/' + LANG + '/privacy/tips/?utm_source=Facebook&utm_medium=MozLandingPage&utm_campaign=privacy2015&utm_content=WebsiteShare'
+    'googleplus': 'https://www.mozilla.org/' + LANG + '/privacy/tips/?utm_source=Google&utm_medium=MozLandingPage&utm_campaign=DPD15&utm_content=WebsiteShare',
+    'facebook': 'https://www.mozilla.org/' + LANG + '/privacy/tips/?utm_source=Facebook&utm_medium=MozLandingPage&utm_campaign=DPD15&utm_content=WebsiteShare'
 }
 %}
 
