bug 1112324 - update privacy shield image
No stick on the mask

--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -873,7 +873,7 @@ html[lang|="en"] {
     h2 {
         padding: 120px @baseLine 0 @baseLine;
         margin-top: @baseLine;
-        background-image: url(/media/img/home/voices/promos/privacy/privacy-shield.svg);
+        background-image: url(/media/img/home/voices/promos/privacy/privacy-shield.svg?1-27-2015);
         background-position: top center;
         background-repeat: no-repeat;
         .background-size(90px, 103px);
