Bug 1109318 Update sharing tile image

--- a/bedrock/privacy/templates/privacy/privacy-day.html
+++ b/bedrock/privacy/templates/privacy/privacy-day.html
@@ -9,7 +9,7 @@
 {% block page_title_prefix %}{% endblock %}
 {% block page_title %}{{ _('Get smart on privacy') }}{% endblock %}
 
-{% block page_image %}{{ media('img/privacy/you/sharing-tile.png') }}{% endblock %}
+{% block page_image %}{{ media('img/privacy/you/sharing-tile.png?2015-01') }}{% endblock %}
 
 {% block page_desc %}
   {{ _('Feel like you’ve lost control of how your information is used online?') }}
