Reorder deployment to keep the git repo clean.
Deployment updates the code via git, then syncs
the files to another directory for processing,
then syncs the files to the servers. It was doing
a lot of processing in the git repo thus creating
a lot of extra files that can cause problems. Moving
this creation to the destination dir means rsync will
clean these up every time and the git repo remains
pristine.

* Don't die if there is no media/revision.txt.
* Allow running of some commands from src dir.

--- a/etc/cron.d/bedrock-stage.tmpl
+++ b/etc/cron.d/bedrock-stage.tmpl
@@ -26,9 +26,9 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 #0 * * * * * root cd /data/www.allizom.org-django/bedrock; python manage.py --settings=settings/memcache-scl3.py cron update_feeds 2>&1 1> /dev/null | grep -v 'old-style Playdoh layout'"
 
 # bug 1072999
-41 * * * * {{ django_manage }} update_security_advisories --quiet
+# Have to do this in the SRC dir because rsync destroys git repos in WWW dir.
+41 * * * * {{ django_src_manage }} update_security_advisories --quiet
 
 # bug 1087533
-# TODO: redirect output to null after initial deployment and verification
-42 * * * * {{ django_cron }} update_reps_ical
+42 * * * * {{ django_cron }} update_reps_ical > /dev/null 2>&1
 
