--- a/etc/cron.d/bedrock-prod.tmpl
+++ b/etc/cron.d/bedrock-prod.tmpl
@@ -6,7 +6,7 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 
 */10 * * * * root /data/bedrock/src/update-www.mozilla.org.sh
 
-*/5    * * * * {{ django_manage }} rnasync > /dev/null 2>&1
+*/5  * * * * {{ django_manage }} rnasync > /dev/null 2>&1
 */15 * * * * {{ user }} /data/bedrock/src/update-www.mozilla.org-cron-svn-locale.sh &> /dev/null
 # outputs when the run completed to http://www.mozilla.org/media/locale_finished.txt
 
@@ -17,7 +17,8 @@ MAILTO="webops-cron@mozilla.com,cron-bedrock@mozilla.com"
 2 */6 * * * {{ django_cron }} update_tweets > /dev/null 2>&1
 
 # bug 1072999, 1109344
-*/30 * * * * {{ django_manage }} update_security_advisories --quiet > /dev/null 2>&1
+# Have to do this in the SRC dir because rsync destroys git repos in WWW dir.
+*/30 * * * * {{ django_src_manage }} update_security_advisories --quiet > /dev/null 2>&1
 
 # bug 1087533
 42 * * * * {{ django_cron }} update_reps_ical > /dev/null 2>&1
