Fixes Bug 1122937 - Errornous hex color value
* Changes the hex value for the color 'Marketplace Light Blue' to
* #0095DD

--- a/bedrock/styleguide/templates/styleguide/identity/marketplace-color.html
+++ b/bedrock/styleguide/templates/styleguide/identity/marketplace-color.html
@@ -119,7 +119,7 @@
   <div class="swatch-card clear" id="swatch-light-blue">
     <div class="swatch"></div>
     <h4>Marketplace light blue</h4>
-    <p><b>#F5EFE6 / Pantone 2925 C</b></p>
+    <p><b>#0095DD / Pantone 2925 C</b></p>
     <table>
       <tr>
         <th>H</th> <td>199</td>
